Massive changes
- Finished private messages
- Implemented websocket api
- New bean properties
- Generator changes