@@ -1,5 +1,6 @@
 package com.binance.api;
 
+import com.binance.api.beans.AggTrade;
 import com.binance.api.beans.AggTrades;
 import com.binance.api.beans.AllBookTickers;
 import com.binance.api.beans.AllPrices;
@@ -7,11 +8,10 @@ import com.binance.api.beans.BookTicker;
 import com.binance.api.beans.Candlestick;
 import com.binance.api.beans.Depth;
 import com.binance.api.beans.Klines;
-import com.binance.api.beans.Ping;
 import com.binance.api.beans.PriceChangeStat;
+import com.binance.api.beans.Success;
 import com.binance.api.beans.SymbolPrice;
 import com.binance.api.beans.Time;
-import com.binance.api.beans.Trade;
 import com.binance.api.messages.AggTradesMessage;
 import com.binance.api.messages.AllBookTickersMessage;
 import com.binance.api.messages.AllPricesMessage;
@@ -23,7 +23,7 @@ import com.binance.api.messages.TimeMessage;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 
@@ -31,62 +31,60 @@ import static com.binance.api.Util.httpGet;
 
 public class BinanceApiPublic {
 
-  private ObjectMapper mapper = new ObjectMapper();
+  ObjectMapper mapper = new ObjectMapper();
 
-  public Ping getPing() {
-    return jsonMap(PingMessage.getQuery(), Ping.class);
+  public Success getPing() {
+    return getJsonMap(PingMessage.getQuery(), Success.class);
   }
 
   public Time getTime() {
-    return jsonMap(TimeMessage.getQuery(), Time.class);
+    return getJsonMap(TimeMessage.getQuery(), Time.class);
   }
 
   public Depth getDepth(DepthMessage depth) {
-    return jsonMap(depth.getQuery(), Depth.class);
+    return getJsonMap(depth.getQuery(), Depth.class);
   }
 
   public AggTrades getAggTrades(AggTradesMessage aggTrades) {
-    return jsonMapToList(aggTrades.getQuery(), AggTrades::new, Trade[].class);
+    return getJsonMapToList(aggTrades.getQuery(), AggTrades::new, AggTrade[].class);
   }
 
-  public Klines getKlines(KlinesMessage message){
-    try {
-      Object[][] objects = mapper.readValue(httpGet(message.getQuery()), Object[][].class);
-      ArrayList<Candlestick> candlesticks = new ArrayList<>();
-      for (Object[] arr : objects) {
-        candlesticks.add(Candlestick.fromList(arr));
-      }
-      return new Klines(candlesticks);
-    } catch (IOException e) {
-      e.printStackTrace();
-    }
-    return null;
+  public Klines getKlines(KlinesMessage message) {
+    return getJsonMapToList(message.getQuery(), Klines::new, Candlestick[].class);
   }
 
   public PriceChangeStat get24h(TickerMessage ticker) {
-    return jsonMap(ticker.getQuery(), PriceChangeStat.class);
+    return getJsonMap(ticker.getQuery(), PriceChangeStat.class);
   }
 
   public AllPrices getAllPrices() {
-    return jsonMapToList(AllPricesMessage.getQuery(), AllPrices::new, SymbolPrice[].class);
+    return getJsonMapToList(AllPricesMessage.getQuery(), AllPrices::new, SymbolPrice[].class);
   }
 
   public AllBookTickers getAllBockTickers() {
-    return jsonMapToList(AllBookTickersMessage.getQuery(), AllBookTickers::new, BookTicker[].class);
+    return getJsonMapToList(AllBookTickersMessage.getQuery(), AllBookTickers::new, BookTicker[].class);
   }
 
-  private <T, E> T jsonMapToList(String query, Function<List<E>, T> constructor, Class<E[]> inner) {
+  private <T, E> T getJsonMapToList(String query, Function<List<E>, T> constructor, Class<E[]> inner) {
+    return jsonMapToList(httpGet(query), constructor, inner);
+  }
+
+  private <T> T getJsonMap(String query, Class<T> clazz) {
+    return jsonMap(httpGet(query), clazz);
+  }
+
+  <T, E> T jsonMapToList(String data, Function<List<E>, T> constructor, Class<E[]> inner) {
     try {
-      return constructor.apply(List.of(mapper.readValue(httpGet(query), inner)));
+      return constructor.apply(Arrays.asList(mapper.readValue(data, inner)));
     } catch (IOException e) {
       e.printStackTrace();
     }
     return null;
   }
 
-  private <T> T jsonMap(String query, Class<T> clazz) {
+  <T> T jsonMap(String data, Class<T> clazz) {
     try {
-      return mapper.readValue(httpGet(query), clazz);
+      return mapper.readValue(data, clazz);
     } catch (IOException e) {
       e.printStackTrace();
       return null;
